--- a/001/test.html
+++ b/001/test.html
@@ -1,12 +1,20 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>杰哥最帅</title>
+    <title>Title</title>
+    <style type="text/css">
+        body{
+            background-image: url(./images/0.jpg);
+            background-size: 100% 100%;
+            height: 100%;
+        }
+        html{
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
-<img src="./images/0.ipg"/>
 <h1>音乐协会</h1>
 <p>爱音乐，爱生活</p>
 <p>我们的活动，我们的音生</p>
