--- a/001/test.html
+++ b/001/test.html
@@ -12,6 +12,13 @@
         html{
             height: 100%;
         }
+        @keyframes myfirst
+        {
+            from {background:red;}
+            to {background:green;}
+        }
+h1{animation：myfirst 1s;
+}
     </style>
 </head>
 <body>
